--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal Insurance Agent Website</title>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+      <title>Sarah Mitchell - IA Financial Group</title>
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     </head>
 
     <body>
